[gd_scene load_steps=3 format=3 uid="uid://dbqy0gbujn78"]

[ext_resource type="Script" path="res://Scenes/Caravan/Caravan.gd" id="1_judbn"]
[ext_resource type="PackedScene" uid="uid://bylepqm1t8qb6" path="res://Scenes/CardDropSlots/OpenNumericCardSlot.tscn" id="2_itpdk"]

[node name="Caravan" type="TextureRect" groups=["Caravans"]]
offset_right = 95.0
offset_bottom = 130.0
expand_mode = 1
stretch_mode = 4
script = ExtResource("1_judbn")

[node name="PlayedCards" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 95.0
offset_bottom = 130.0
expand_mode = 1
stretch_mode = 4

[node name="OpenNumericCardSlot" parent="." instance=ExtResource("2_itpdk")]
visible = false
layout_mode = 0

[connection signal="child_entered_tree" from="." to="." method="_register_cardslot_to_caravan"]
